--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,3 +4,10 @@ theme :
 ---
 {% include JB/setup %}
 {% include themes/twitter/default.html %}
+<link rel="stylesheet" href="/css/pygments.css">
+
+
+
+
+
+
