--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,4 +4,4 @@ theme :
 ---
 {% include JB/setup %}
 {% include themes/twitter/default.html %}
--<link rel="stylesheet" href="/css/pygments.css">
+<link rel="stylesheet" href="/css/pygments.css">
