--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font: 16px/1.5 verdana, helvetica-neue, helvetica, arial, san-serif;
-  background: black;
+  background: white;
   color: #ececec;
   padding: 0;
   margin: 0;
@@ -10,7 +10,7 @@ ul {
   padding: 0;
 }
 a {
-  color: #ccc;
+  color: #000;
   text-decoration: none;
 }
  
