--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -29,6 +29,17 @@
   {% endunless %}  
 
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Grande -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-8829897225279483"
+     data-ad-slot="8382057259"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
     <hr>
     <div class="pagination">
       <ul>
