--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -3,6 +3,17 @@
 </div>
 
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- New -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-8829897225279483"
+     data-ad-slot="1415458455"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
 <div class="row-fluid post-full">
   <div class="span12">
     <div class="date">
