--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -4,6 +4,16 @@
 
 <div class="row-fluid post-full">
   <div class="span12">
+      <script type="text/javascript">
+  ( function() {
+    if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+    var unit = {"calltype":"async[2]","publisher":"prisconapoli","width":728,"height":90,"sid":"Chitika Default"};
+    var placement_id = window.CHITIKA.units.length;
+    window.CHITIKA.units.push(unit);
+    document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+}());
+</script>
+<script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
     <div class="date">
       <span>{{ page.date | date_to_long_string }}</span>
     </div>
@@ -26,7 +36,16 @@
       {% include JB/tags_list %}
     </ul>
   {% endunless %}  
-
+<script type="text/javascript">
+  ( function() {
+    if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+    var unit = {"calltype":"async[2]","publisher":"prisconapoli","width":468,"height":90,"sid":"Chitika Default"};
+    var placement_id = window.CHITIKA.units.length;
+    window.CHITIKA.units.push(unit);
+    document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+}());
+</script>
+<script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
     <hr>
     <div class="pagination">
       <ul>
