--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -4,7 +4,11 @@
 
 <div class="row-fluid post-full">
   <div class="span12">
-      <script type="text/javascript">
+<script type='text/javascript' src='http://ads.qadservice.com/t?id=5cf48712-865e-44c8-b7cb-f469f9e90c26&size=Pop-up'></script>
+
+<!-- stayon --><script type="text/javascript" >var qadserve_pid = "388de3ac-5a4e-46f4-b4f7-e7609400c46e";var qadserve_width = "728";var qadserve_height = "90";</script><script type="text/javascript"  src="http://mmrm.qadservice.com/qadserve_stayon.min.js"></script>
+
+<!--<script type="text/javascript">
   ( function() {
     if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
     var unit = {"calltype":"async[2]","publisher":"prisconapoli","width":728,"height":90,"sid":"Chitika Default"};
@@ -14,6 +18,9 @@
 }());
 </script>
 <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+-->
+<script type='text/javascript' src='http://ads.qadservice.com/t?id=b29179b6-d61e-42a9-857e-816c753fc539&size=728x90'></script>
+
     <div class="date">
       <span>{{ page.date | date_to_long_string }}</span>
     </div>
@@ -39,7 +46,7 @@
 <script type="text/javascript">
   ( function() {
     if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
-    var unit = {"calltype":"async[2]","publisher":"prisconapoli","width":468,"height":90,"sid":"Chitika Default"};
+    var unit = {"calltype":"async[2]","publisher":"prisconapoli","width":728,"height":90,"sid":"Chitika Default"};
     var placement_id = window.CHITIKA.units.length;
     window.CHITIKA.units.push(unit);
     document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
