--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -104,7 +104,7 @@
     <section class="copyright">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 text-center">&copy; {{ site.time | date: '%Y' }} Designed with <i class="fa fa-heart"></i> by <a href="http://ie.linkedin.com/in/prisconapoli" target="_blank">{{ site.author.name }}</a></div>
+                <div class="col-sm-12 text-center">&copy; {{ site.time | date: '%Y' }} Designed with <i class="fa fa-heart"></i> by <a href="http://ie.linkedin.com/in/prisconapoli" target="_blank">{{ site.author.name }}</a>. Template by: <a href="http://webthemez.com">webthemez.com</a> </div>
             </div>
             <!-- / .row -->
         </div>
