--- a/_includes/themes/twitter/homepage.html
+++ b/_includes/themes/twitter/homepage.html
@@ -444,12 +444,11 @@
                 <div class="col-md-12">
                     <div class="row">
                         <div class="portfolio-items isotopeWrapper clearfix" id="3">
-                            {% for category in site.categories %}
-                            {% for posts in category %}
-                              {% for post in posts %}
-                                {% if forloop.index < 4 %}
-                                    {% if post.title %}
-                             <article class="col-sm-4 isotopeItem {{ category[0] }}">
+                            {% assign sor = site.posts | group_by:"category" %}
+                            {% for group in sor  %}
+                            {% for post in group.items | limit:3 %}
+                            {% if post.title %}
+                             <article class="col-sm-4 isotopeItem {{ group.name|downcase }}">
                                 <div class="portfolio-item">
                                     {% if post.image %}
                                     <img src="{{ site.url }}/assets/images/{{ post.image }}" alt="{{ post.title }}" />
@@ -473,10 +472,8 @@
                                 </div>
                             </article>
                             {% endif %}
-                            {% endif %}
                             {% endfor %}
-                            {% endfor %}
-                            {% endfor %}
+                             {% endfor %}
                         </div>
 
                     </div>
