--- a/_includes/themes/twitter/homepage.html
+++ b/_includes/themes/twitter/homepage.html
@@ -70,7 +70,7 @@
     <section id="introText">
         <div class="container">
             <div class="text-center">
-            <h1><b>I make software</b> most of the time and <b>I really love it</b>.</h1>
+            <h1><b>To those who pursue the beauty of the code</h1>
             </div>
         </div>
     </section>
@@ -82,7 +82,7 @@
                 <!-- Heading -->
                 <h2>I am Prisco, a Software Engineer</h2>
     <p align="justify">
-              Hi all, I am a Software Engineer whom has experienced several successful projects in <b>Telco</b> and <b>Financial</b> sectors. My current Job is in <a href="http://corvil.com/">Corvil</a>, the <b>IT data analytics company</b> for <b>business in the Now</b>.
+              I make software</b> most of the time and <b>I really love it</b>. I worked for several successful companies in <b>Telco</b> and <b>Financial</b> sectors. My current Job is in <a href="http://corvil.com/">Corvil</a>, the <b>IT data analytics company</b> for <b>business in the Now</b>.
               I am involved on the design and development of real-time key analytics plugins across a broad range of trading, middleware and enterprise data protocols.</p>
                <p align="justify">
               I have a unstoppable curiosity that drive me to learn new methodologies, programming languages and cutting-edge technologies. Lots and lots of books, videos and hundreds of articles. I also love to read about <b>mathematics</b>, <b>physics</b> and <b>computer science</b>. 
