--- a/_includes/themes/twitter/homepage.html
+++ b/_includes/themes/twitter/homepage.html
@@ -37,8 +37,14 @@
             <div class="container banner-content">
                 <div id="da-slider" class="da-slider">
                     <div class="da-slide">
-                        <h2>STL/Boost</h2>
-                        <p>The best generic-purpose and cross-platform libraries for C++ development</p>
+                        <h2>Ultra Low Latency Messaging</h2>
+                        <p>Optimize delivery performance of high-volume market data feeds and ultra low latency applications</p>
+                        <div class="da-img"></div>
+                    </div>
+                    <div class="da-slide">
+                        <h2>Worldwide Financial Protocols</h2>
+                        <p>FIX/FAST, NASDAQ OUCH, ITCH and OMnet API, NYSE ArcaDirect, XPRS Direct Edge, BATS BOE/BOE-US, LSE Native Trading Gateway, RWF/EDF for Thomson Reuter 
+                        </p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
@@ -47,14 +53,23 @@
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>FIX/FAST</h2>
-                        <p>Optimize delivery performance of high-volume market data feeds and ultra low latency applications
-                        </p>
+                        <h2>STL/Boost</h2>
+                        <p>The best generic-purpose and cross-platform libraries for C++ development</p>
+                        <div class="da-img"></div>
+                    </div>
+                    <div class="da-slide">
+                        <h2>Effective parallelism</h2>
+                        <p>Multi-threading, lock-free/wait free data structures, relaxed memory models, mechanical sympathy</p>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
                         <h2>Openstack</h2>
                         <p>Build and manage cloud computing platforms for public and private clouds</p>
+                        <div class="da-img"></div>
+                    </div>
+                    <div class="da-slide">
+                        <h2>At edge</h2>
+                        <p>Conversations on the edge of the science's knowledge: quantum physics, many-worlds interpretation, information in quantum computing</p>
                         <div class="da-img"></div>
                     </div>
         <!--  <nav class="da-arrows">
