Jump into deep end: part 2

--- a/_includes/themes/twitter/homepage.html
+++ b/_includes/themes/twitter/homepage.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="da-slide">
                         <h2>Worldwide Financial Protocols</h2>
-                        <p>FIX/FAST, NASDAQ OUCH, ITCH and OMnet API, NYSE ArcaDirect, XPRS Direct Edge, BATS BOE/BOE-US, LSE Native Trading Gateway, RWF/EDF for Thomson Reuter 
+                        <p>FIX/FAST, NASDAQ OUCH, ITCH, OMnet API, NYSE ArcaDirect, XPRS Direct Edge, BATS BOE/BOE-US, LSE Native Trading Gateway, RWF/EDF for Thomson Reuter 
                         </p>
                         <div class="da-img"></div>
                     </div>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="da-slide">
                         <h2>At edge</h2>
-                        <p>Conversations on the edge of the science's knowledge: quantum physics, many-worlds interpretation, information in quantum computing</p>
+                        <p>Conversations at the edge of science knowledge: quantum computing, many-worlds interpretation, artificial intelligence</p>
                         <div class="da-img"></div>
                     </div>
         <!--  <nav class="da-arrows">
