--- a/_includes/themes/twitter/homepage.html
+++ b/_includes/themes/twitter/homepage.html
@@ -63,6 +63,11 @@
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
+                        <h2>Hadoop, Spark, Storm</h2>
+                        <p>Distributed storage and parallel computation: HDFS, MapReduce, Apache Spark, Apache Storm</p>
+                        <div class="da-img"></div>
+                    </div>
+                    <div class="da-slide">
                         <h2>Openstack</h2>
                         <p>Build and manage cloud computing platforms for public and private clouds</p>
                         <div class="da-img"></div>
@@ -106,7 +111,7 @@
             </div>
             <div class="row">
                 <!-- item -->
-                <div class="col-md-4 text-center tileBox">
+                <div class="col-md-3 text-center tileBox">
                    <div class="txtHead"> <i class="fa fa-desktop"></i>
                     <h3>Software <span class="id-color">Design and Development</span></h3></div>
                     <p>Agile Software Development, Programming Languages, Web Development, SOA, Security and Test Penetration.</p>
@@ -114,7 +119,7 @@
                 <!-- end: -->
 
                 <!-- item -->
-                <div class="col-md-4 text-center tileBox">
+                <div class="col-md-3 text-center tileBox">
                     <div class="txtHead"><i class="fa fa-line-chart"></i>
                     <h3>Global <span class="id-color">Financial Market Protocols</span></h3></div>
                     <p>Financial Systems Architecture, High Frequency Trading, Quantitative Trading, Low-Latency Systems, FIX/FAST.<br/></p>
@@ -122,10 +127,17 @@
                 <!-- end: -->
 
                 <!-- item -->
-                <div class="col-md-4 text-center tileBox">
+                <div class="col-md-3 text-center tileBox">
                     <div class="txtHead"><i class="fa fa-cloud"></i>
                     <h3>Cloud Computing <span class="id-color">Openstack, AWS</span></h3></div>
                     <p>Cloud Computing Architecture, Service Models, Deployment Models, Scalability, Security, Privacy and Trust.
+                    <br/></p>
+                </div>
+                <!-- end: -->
+                <div class="col-md-3 text-center tileBox">
+                    <div class="txtHead"><i class="fa fa-cloud"></i>
+                    <h3>Big Data <span class="id-color">Hadoop, MapReduce</span></h3></div>
+                    <p>Distributed storage and computation, HDFS, MapReduce, Hive, Pig, Apache Spark, Apache Storm, Flume, HBase.
                     <br/></p>
                 </div>
                 <!-- end: -->
@@ -256,7 +268,7 @@
         <div class="container">     
            <div class="heading text-center">
             <!-- Heading -->
-            <h2>Professional Experience</h2>
+            <h2>Professional and Learning Experience</h2>
             <p>Experience is the best teacher, but the tuition is high.</p> <h6>-Norwegian Proverb</h6>
         </div>
         <div id="timeline"><div class="row timeline-movement timeline-movement-top">
@@ -273,12 +285,72 @@
 
         </div>
         <div class="row timeline-movement">
+            <div class="timeline-badge">
+                <span class="timeline-balloon-date-day">Oct</span>
+                <span class="timeline-balloon-date-month">2015</span>
+            </div>
 
+            <div class="col-sm-6  timeline-item">
+                <div class="row">
+                    <div class="col-sm-11">
+                        <div class="timeline-panel credits">
+                            <ul class="timeline-panel-ul">
+                                <li><span class="importo">Hands on Big data: Hadoop, Apache Spark</span></li>
+                                <li><span class="causale"><b>Reliable</b> storage, <b>fast</b> retrieving and processing of tons of unstructured data</
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>    
+        </div>
+        <div class="row timeline-movement">
+            <div class="timeline-badge">
+                <span class="timeline-balloon-date-day">Mar</span>
+                <span class="timeline-balloon-date-month">2015</span>
+            </div>
+
+            <div class="col-sm-offset-6 col-sm-6  timeline-item">
+                <div class="row">
+                    <div class="col-sm-offset-1 col-sm-11">
+                        <div class="timeline-panel debits">
+                            <ul class="timeline-panel-ul">
+                                <li><span class="importo">Effective parallelism</span></li>
+                                <li><span class="causale"><b>Scalability</b> and <b>parallel computation</b>. Effective multithreading programs, <b>sequential consistency</b>, C++/Java memory models.</
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>    
+        </div>
+        <div class="row timeline-movement">
+            <div class="timeline-badge">
+                <span class="timeline-balloon-date-day">Oct</span>
+                <span class="timeline-balloon-date-month">2014</span>
+            </div>
+
+            <div class="col-sm-6  timeline-item">
+                <div class="row">
+                    <div class="col-sm-11">
+                        <div class="timeline-panel credits">
+                            <ul class="timeline-panel-ul">
+                                <li><span class="importo">Low Latency Applications</span></li>
+                                <li><span class="causale">Achieve <b>extreme performance</b> in C++ and Java: coding techniques, patterns, cache models and optimization tools.</
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>    
+        </div>
+        <div class="row timeline-movement">
 
             <div class="timeline-badge">
                 <span class="timeline-balloon-date-day">Feb</span>
                 <span class="timeline-balloon-date-month">2014</span>
             </div>
+
 
             <div class="col-sm-offset-6 col-sm-6  timeline-item">
                 <div class="row">
@@ -323,7 +395,6 @@
         <!--due -->
 
         <div class="row timeline-movement">
-
 
             <div class="timeline-badge">
                 <span class="timeline-balloon-date-day">Apr</span>
@@ -378,8 +449,6 @@
 
 
         <div class="row timeline-movement">
-
-
             <div class="timeline-badge">
                 <span class="timeline-balloon-date-day">Mar</span>
                 <span class="timeline-balloon-date-month">2011</span>
