--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="http://explorercanvas.googlecode.com/svn/trunk/excanvas.js"></script>
   <![endif]-->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{ ASSET_PATH }}/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="{{ ASSET_PATH }}/css/isotope.css" media="screen" />
     <link rel="stylesheet" href="{{ ASSET_PATH }}/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
     <link rel="stylesheet" type="text/css" href="{{ ASSET_PATH }}css/da-slider.css" />
