--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="{{ ASSET_PATH }}/css/isotope.css" media="screen" />
     <link rel="stylesheet" href="{{ ASSET_PATH }}/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="{{ ASSET_PATH }}css/da-slider.css" />
+    <link rel="stylesheet" type="text/css" href="{{ ASSET_PATH }}/css/da-slider.css" />
     <!-- Owl Carousel Assets -->
     <link href="{{ ASSET_PATH }}/js/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/styles.css" />
