--- a/_includes/themes/twitter/homepage.html
+++ b/_includes/themes/twitter/homepage.html
@@ -282,7 +282,30 @@
                     <span class="glyphicon glyphicon-time"></span>
                 </a>
             </div>
+        </div>
+        <div class="row timeline-movement">
+            <div class="timeline-badge">
+                <span class="timeline-balloon-date-day">May</span>
+                <span class="timeline-balloon-date-month">2016</span>
+            </div>
 
+            <div class="col-sm-offset-6 col-sm-6  timeline-item">
+                <div class="row">
+                    <div class="col-sm-offset-1 col-sm-11">
+                        <div class="timeline-panel debits">
+                            <ul class="timeline-panel-ul">
+                                <li><span class="importo">Senior Software Engineer at Corvil</span></li>
+                                <li><span class="causale">Design, development and evolution of the broad range of Corvil Analytics Plugins (C++) and Corvil Connectors (Java) for all major worldwide financial, middleware and enterprise data protocols.
+                                <b>Main activities:</b> C++/Java/Python programming, code reviews, new features design, estimation tasks, mentoring, technical writing.
+                                <b>Technologies:</b> C++, STL/Boost, Python, Java, shell scripting, gdb, valgrind, gprof
+                                </span> </li>
+                                <li><p><small class="text-muted"> 01/05/2016 - Present</small></p> </li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>    
         </div>
         <div class="row timeline-movement">
             <div class="timeline-badge">
@@ -383,7 +406,7 @@
                             <ul class="timeline-panel-ul">
                                 <li><span class="importo">Software Engineer at Corvil</span></li>
                                 <li><span class="causale">Research, design and implementation of key analytics for the Corvil Streaming Analytics Platform. Corvil's Analytics identify and track messages, transactions and performance in real-time across a broad range of trading, middleware and enterprise data protocols. Low level C/C++, Python, Java, FIX, FIX/FAST, Global Financial Market Protocols, IP Networking, STL, Boost</span> </li>
-                                <li><p><small class="text-muted"> 02/12/2013 - Present</small></p> </li>
+                                <li><p><small class="text-muted"> 02/12/2013 - 30/05/2016</small></p> </li>
                             </ul>
                         </div>
 
